<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white" >

    <TextView
        android:id="@+id/title_id"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:layout_marginLeft="20dip"
        android:text="@string/hello_world"
        android:textColor="@android:color/black"
        android:layout_gravity="start|center_vertical" />
    
    <View style="@style/common_ui_divider" />

    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:scrollbars="none"
        android:layout_gravity="center_horizontal" >
       
        <TextView
	        android:id="@+id/message_id"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dip"
	        android:text="@string/message"
	        android:textColor="@android:color/black"
	        android:layout_gravity="center_horizontal"
	        android:gravity="center" />
        
    </ScrollView>
    
    
    <View style="@style/common_ui_divider" />
    
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="68dip"
        android:layout_marginLeft="20dip"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="2" >

	    <Button
	        android:id="@+id/cancel_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:background="@null"
	        android:text="@string/cancel"
	        android:textColor="@android:color/black" />
	    
	    <Button
	        android:id="@+id/ok_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@null"
	        android:layout_weight="1"
	        android:text="@string/ok"
	        android:textColor="@android:color/black" />
	
	</LinearLayout>

</LinearLayout>
