<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="56dip"      
    android:orientation="horizontal"
    android:weightSum="4"
    android:background="@android:color/white" >
    
    <TextView
	    android:id="@+id/cancel"
	    android:layout_width="wrap_content"
	    android:layout_height="56dip" 
	    android:layout_marginStart="8dip"
  		android:layout_weight="1"
  		android:gravity="center_vertical|start"
  		android:maxWidth="90dp"
  		android:maxLines="1"
  		android:ellipsize="marquee"
	    android:text="@string/cancel"
		android:textSize="17sp"
		android:textColor="@android:color/black" />

	 <TextView
	    android:id="@+id/title"
	    android:layout_width="wrap_content"
	    android:layout_height="56dip" 		    				
		android:layout_marginStart="5dip"
		android:layout_marginEnd="5dip"
		android:layout_weight="2"
		android:gravity="center"
		android:maxLines="1"
		android:ellipsize="marquee"
		android:text="@string/crop_label"
		android:textSize="17sp"
		android:textColor="@android:color/black" />
	 
	 <TextView
	    android:id="@+id/btn_done"
	    android:layout_width="wrap_content"
	    android:layout_height="56dip"
	    android:layout_marginEnd="8dip"
	    android:layout_weight="1"
  		android:gravity="center_vertical|end"
  		android:maxLines="1"
  		android:maxWidth="90dp"
  		android:ellipsize="marquee"
	    android:text="@string/crop_save_text"
		android:textSize="17sp"
		android:textColor="#FF07A723" />

</LinearLayout>